cabal-version:      2.4
name:               prune-juice-fixture
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Diego Balseiro
maintainer:         dbalseiro@stackbuilders.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        prune-juice-fixture-common

    hs-source-dirs:   src
    default-language: Haskell2010

library prune-juice-fixture-common
    exposed-modules:  Common
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   common
    default-language: Haskell2010

executable prune-juice-fixture
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        prune-juice-fixture,
        prune-juice-fixture-common

    hs-source-dirs:   app
    default-language: Haskell2010
